apps/sportsodds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportsodds
  namespace: sportsodds
spec:
  selector:
    app: sportsodds
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
