apps/sportsodds/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportsodds
  namespace: sportsodds
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sportsodds.taxayp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sportsodds
                port:
                  number: 80
  tls:
    - hosts:
        - sportsodds.taxayp.com
      secretName: sportsodds-tls
